Basic d3 reporting for each iperf dataset in the model.

--- a/zitilab/reporting/templates/index.html
+++ b/zitilab/reporting/templates/index.html
@@ -3,8 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <style>
+            .line {
+                fill: none;
+                stroke: steelblue;
+                stroke-width: 2px;
+            }
+        </style>
     </head>
     <body>
+        <script src="https://d3js.org/d3.v4.js"></script>
         <script>
             {{ $datasets := .Datasets }}
             var data = {
@@ -13,9 +21,45 @@
                 {{ end }}
             };
 
-            (function() {
-                console.log(Object.keys(data));
-            })();
+            var parseTime = d3.timeParse("%Q");
+
+            Object.keys(data).forEach(function(key) {
+                var selected = data[key]["initiator.iperf-client.iperf_metrics"];
+                selected.forEach(function(d) {
+                    d.timestamp = parseTime(d.timestamp_ms);
+                });
+                appendGraph(selected);
+            });
+
+            function appendGraph(dataset) {
+                var margin = {top: 20, right: 20, bottom: 30, left: 100},
+                    width = 960 - margin.left - margin.right,
+                    height = 500 - margin.top - margin.bottom;
+
+                var x = d3.scaleTime().range([0, width]);
+                var y = d3.scaleLinear().range([height, 0]);
+
+                var valueline = d3.line()
+                    .x(function(d) { return x(d.timestamp); })
+                    .y(function(d) { return y(d.bits_per_second); });
+
+                var svg = d3.select("body").append("svg")
+                    .attr("width", width + margin.left + margin.right)
+                    .attr("height", height + margin.top + margin.bottom)
+                    .append("g")
+                    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+                x.domain(d3.extent(dataset, function(d) { return d.timestamp; }));
+                y.domain([0, d3.max(dataset, function(d) { return d.bits_per_second; })]);
+
+                svg.append("path")
+                    .data([dataset])
+                    .attr("class", "line")
+                    .attr("d", valueline);
+
+                svg.append("g").attr("transform", "translate(0," + height + ")").call(d3.axisBottom(x));
+                svg.append("g").call(d3.axisLeft(y));
+            }
         </script>
     </body>
 </html>
