--- a/zitilab/reporting/templates/index.html
+++ b/zitilab/reporting/templates/index.html
@@ -18,7 +18,7 @@
             <div class="dataset_report">
                 <h1>Dataset [{{ "{{dataset}}" }}]</h1>
                 <div id="dataset_{{ "{{dataset}}" }}">
-                    <h2>iPerf Throughput</h2>
+                    <h2>iPerf Throughput:</h2>
                     <svg id="throughput_{{ "{{dataset}}" }}"/>
                 </div>
             </div>
@@ -30,31 +30,38 @@
                 "{{ $index }}": {{ $dataset }},
                 {{ end }}
             };
+            console.log("data", data);
 
             var parseTime = d3.timeParse("%Q");
             var datasetTemplate = document.getElementById('dataset_template').innerHTML;
             Mustache.parse(datasetTemplate);
 
             Object.keys(data).forEach(function(key) {
-                var selected = data[key]["initiator.iperf-client.iperf_metrics"];
-                selected.forEach(function(d) {
-                    d.timestamp = parseTime(d.timestamp_ms);
-                });
+                var selected = data[key]["initiator_iperf_client_iperf_metrics"];
+                if(selected != null) {
+                    console.log("selected", selected);
+                    selected.forEach(function(d) {
+                        d.timestamp = parseTime(d.timestamp_ms);
+                    });
 
-                var datasetDiv = document.createElement("div");
-                datasetDiv.id = "dataset_" + key;
-                document.getElementsByTagName('body')[0].appendChild(datasetDiv);
+                    var datasetDiv = document.createElement("div");
+                    datasetDiv.id = "dataset_" + key;
+                    document.getElementsByTagName('body')[0].appendChild(datasetDiv);
 
-                var rendered = Mustache.render(datasetTemplate, {dataset: key});
-                document.getElementById("dataset_" + key).innerHTML = rendered;
+                    var rendered = Mustache.render(datasetTemplate, {dataset: key});
+                    document.getElementById("dataset_" + key).innerHTML = rendered;
 
-                appendGraph(key, selected);
+                    appendGraph(key, selected);
+
+                } else {
+                    console.log("!selected");
+                }
             });
 
             function appendGraph(name, dataset) {
                 var margin = {top: 20, right: 20, bottom: 30, left: 100},
-                    width = 960 - margin.left - margin.right,
-                    height = 500 - margin.top - margin.bottom;
+                    width = window.innerWidth - margin.left - margin.right - 20,
+                    height = 320 - margin.top - margin.bottom;
 
                 var x = d3.scaleTime().range([0, width]);
                 var y = d3.scaleLinear().range([height, 0]);
