Updated reporting to build off the dump, rather than the dataset. (#23, #34)

--- a/zitilab/characterization/reporting/templates/index.html
+++ b/zitilab/characterization/reporting/templates/index.html
@@ -582,13 +582,13 @@
         </script>
 
         {{$regionKeys := .RegionKeys}}
-        {{$regions := .Regions}}
+        {{$regionData := .RegionData}}
         {{range $i, $regionKey := $regionKeys}}
             <div class="container">
                 <h1>"{{$regionKey}}" Region</h1>
             </div>
 
-            {{$region := index $regions $regionKey}}
+            {{$region := index $regionData $regionKey}}
             <div class="container">
                 <div class="row">
                     <div class="col">
